--- a/404.html
+++ b/404.html
@@ -1,4 +1,10 @@
-<html><body>
+<html>
+<head>
+<style>
+.red {background-color: red; color:white; }
+</style>
+</head>
+<body>
 <h1>Pagina non trovata</h1>
-La pagina richiesta non esiste.
+<span class='red'>La pagina richiesta non esiste.</span>
 </body></html>
