--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ img {
 </head>
 <body>
 <div class='w3-container'>
-<h1><a href="https://libuni.blogspot.com/"><img src=/myimg/images/logo-300.jpg></a>
+<h1><a href="https://libuni.blogspot.com/"><img src=/images/logo-300.jpg></a>
  Calendario Corsi del mese di Maggio 2023</h1>
 <!-- formsplash -->
 <p>
@@ -120,14 +120,13 @@ Sito&nbsp;Web&nbsp;Libuni</a>
 </div>
 <span class="noprint">
 <iframe style="border:none;" src="/info" height=50 width="90%"></iframe>
--->
 <p><a class='w3-button w3-khaki w3-border w3-border-blue' href='https://www.libuni.org/calnex.php'>Vai a Calendario Mese Successivo</a>
 <a class='w3-button w3-khaki w3-border w3-border-blue' href='https://www.libuni.org/calsett.php'>Vai a Calendario 7 Giorni</a>
+-->
 <br>___<br><br>
 Questo sito non utilizza nessun cookie<br>
 e non conserva nessun dato dei visitatori.
 </span>
 <p>Libera Università di Citt&agrave; della Pieve APS - Cod.Fisc.: 94056590543
-<p>v.10.8&nbsp;-&nbsp;<span class=cp>&copy; 2018-2023 C. Zappal&agrave;</span>
 <br>v.ac=2023-03-22 17:20:53 v.qu=2023-03-28 10:49:56
 </body></html>
